--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "ismobilejs": "^1.1.1",
     "lodash-es": "^4.17.21",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
