--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
     "vue-tsc": "^1.8.19"
+  },
+  "volta": {
+    "node": "18.20.2",
+    "yarn": "4.1.1"
   }
 }
