--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
   },
   "dependencies": {
     "ismobilejs": "^1.1.1",
-    "lodash-es": "^4.17.21",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
-    "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.18.5",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
@@ -34,7 +32,7 @@
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "3.4.3",
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
     "vue-tsc": "^1.8.19"
