--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "lint": "eslint --cache --fix",
+    "format": "prettier --write src/",
+    "postinstall": "husky"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue,json}": [
+      "eslint --cache --fix",
+      "prettier --write src/"
+    ]
   },
   "dependencies": {
     "ismobilejs": "^1.1.1",
@@ -27,12 +34,16 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.49.0",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.17.0",
     "gh-pages": "^6.0.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.31",
-    "prettier": "^3.0.3",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.13",
     "tailwindcss": "3.4.3",
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
