--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "lint": "eslint --cache --fix",
     "format": "prettier --write src/",
-    "postinstall": "husky"
+    "prepare": "husky"
   },
   "lint-staged": {
-    "*.{js,ts,vue,json}": [
+    "*.{js,ts,vue}": [
       "eslint --cache --fix",
       "prettier --write src/"
     ]
@@ -34,8 +34,7 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^9.0.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "gh-pages": "^6.0.0",
     "husky": "^9.0.11",
