--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,6 +4,6 @@
   "tabWidth": 2,
   "singleQuote": true,
   "printWidth": 100,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "plugins": ["prettier-plugin-tailwindcss"]
 }
