🔧 actions/setup-node@v4

--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -13,10 +13,11 @@ jobs:
     steps:
       - name: チェックアウト
         uses: actions/checkout@v4
-      - uses: actions/setup-node@v2
+      - run: corepack enable
+      - uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
-          cache: 'yarn'
+          node-version: 18
+          cache: yarn
       - name: 静的ビルド
         run: |
           yarn install
