--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -20,6 +20,6 @@ jobs:
           cache: yarn
       - name: 静的ビルド
         run: |
-          yarn set version 4.x
+          yarn set version stable
           yarn install
           yarn deploy
