--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@v4
       - name: 静的ビルド
         run: |
+          git config --global user.email ttttt.fms5@gmail.com
+          git config --global user.name tkawa15
           yarn set version stable
           yarn install
           yarn deploy
