--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -15,9 +15,13 @@ jobs:
         uses: actions/checkout@v4
       - name: 静的ビルド
         run: |
-          git config --global user.email ttttt.fms5@gmail.com
-          git config --global user.name tkawa15
-          git config --global url."ssh://git@github.com".insteadOf "https://github.com"
           yarn set version stable
           yarn install
           yarn deploy
+      - name: GitHub Pagesにデプロイ
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+          user_name: tkawa15
+          user_email: ttttt.fms5@gmail.com
