--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           yarn set version stable
           yarn install
-          yarn deploy
+          yarn deploy-only
       - name: GitHub Pagesにデプロイ
         uses: peaceiris/actions-gh-pages@v3
         with:
