--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "deploy": "yarn check:types && NODE_ENV=production yarn build",
     "preview": "vite preview",
-    "build-only": "NODE_ENV=production vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
+    "build": "vite build",
+    "check:types": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "lint": "eslint --cache --fix",
     "format": "prettier --write src/",
     "prepare": "husky"
