--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     ]
   },
   "dependencies": {
-    "ismobilejs": "^1.1.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
-    "vue3-carousel": "^0.3.3"
+    "vue3-carousel": "^0.3.3",
+    "vue3-mq": "^3.2.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
